<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context=".ui.register.RegisterFragment">

    <View
        android:id="@+id/titleView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_60sdp"
        android:background="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/createAccountText"
        android:fontFamily="@font/readex_semibold"
        android:textSize="@dimen/_14ssp"
        android:textColor="@color/gray"
        app:layout_constraintTop_toTopOf="@+id/titleView"
        app:layout_constraintStart_toStartOf="@+id/titleView"
        app:layout_constraintEnd_toEndOf="@+id/titleView"
        app:layout_constraintBottom_toBottomOf="@+id/titleView"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleView"
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_marginStart="@dimen/_30sdp"
        android:layout_marginEnd="@dimen/_30sdp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/RegisterEditTextName"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/personName"
            android:textSize="@dimen/_12ssp"
            android:layout_marginBottom="@dimen/_15sdp"
            android:padding="@dimen/_15sdp"
            android:fontFamily="@font/readex_regular"
            android:background="@drawable/input_background" />

        <EditText
            android:id="@+id/RegisterEditTextEmail"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:hint="@string/emailAddress"
            android:textSize="@dimen/_12ssp"
            android:layout_marginBottom="@dimen/_15sdp"
            android:padding="@dimen/_15sdp"
            android:fontFamily="@font/readex_regular"
            android:background="@drawable/input_background" />


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginBottom="@dimen/_15sdp"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:hintEnabled="false"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/RegisterEditTextPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:focusableInTouchMode="true"
                android:ems="10"
                android:inputType="textPassword"
                android:hint="@string/passwordLogin"
                android:textSize="@dimen/_12ssp"
                android:padding="@dimen/_15sdp"
                android:fontFamily="@font/readex_regular"
                android:background="@drawable/input_background" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/RegisterButton"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:fontFamily="@font/readex_bold"
            android:textSize="@dimen/_12ssp"
            android:background="@drawable/btn_background"
            android:text="@string/registerText" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="@dimen/_30sdp"
        android:layout_marginEnd="@dimen/_30sdp"
        android:layout_marginBottom="@dimen/_30sdp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/haveAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_5sdp"
            android:layout_weight="2"
            android:gravity="end"
            android:fontFamily="@font/readex_medium"
            android:text="@string/haveAccount" />

        <TextView
            android:id="@+id/LoginBtnFromRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/blueChat"
            android:fontFamily="@font/readex_bold"
            android:text="@string/loginTitle" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>