<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/backgroundColor"
    tools:context=".ui.listNav.ListFragment">

    <View
        android:id="@+id/titleView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_60sdp"
        android:background="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <ImageView
        android:id="@+id/backIcon"
        android:layout_width="@dimen/_20sdp"
        android:layout_height="@dimen/_20sdp"
        app:layout_constraintStart_toStartOf="@+id/titleView"
        app:layout_constraintTop_toTopOf="@+id/titleView"
        app:layout_constraintBottom_toBottomOf="@+id/titleView"
        android:layout_marginStart="@dimen/_30sdp"
        android:src="@drawable/ic_close" />

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/list"
        android:fontFamily="@font/readex_semibold"
        android:textSize="@dimen/_14ssp"
        android:textColor="@color/gray"
        app:layout_constraintTop_toTopOf="@+id/titleView"
        app:layout_constraintStart_toStartOf="@+id/titleView"
        app:layout_constraintEnd_toEndOf="@+id/titleView"
        app:layout_constraintBottom_toBottomOf="@+id/titleView"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/titleView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginStart="@dimen/_30sdp"
        android:layout_marginEnd="@dimen/_30sdp">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/_15sdp"
            app:cardBackgroundColor="@color/white"
            app:cardElevation="0dp"
            app:cardCornerRadius="@dimen/_10sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/_15sdp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/profileBtnIcon"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_person" />

                <TextView
                    android:id="@+id/profileBtn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:fontFamily="@font/readex_semibold"
                    android:textSize="@dimen/_14ssp"
                    android:textColor="@color/black"
                    android:text="@string/profileBtnText" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardBackgroundColor="@color/white"
            app:cardElevation="0dp"
            app:cardCornerRadius="@dimen/_10sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/_15sdp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/LogoutBtnIcon"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_logout" />

                <TextView
                    android:id="@+id/LogoutBtn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:fontFamily="@font/readex_semibold"
                    android:textSize="@dimen/_14ssp"
                    android:textColor="@color/black"
                    android:text="@string/LogoutBtnText" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>